[package]
name = "monobank-sync-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["chrono", "migrate", "postgres", "runtime-tokio-native-tls", "sqlite"] }
dotenv = "0.15"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rand = "0.8.5"
serde_with = { version = "3.8.1", features = ["chrono"] }
tokio = { version = "1.37.0", features = ["full"] }
