[package]
name = "monobank-sync-rust"
version = "0.2.1"
edition = "2021"
description = "Synchronize data from Monobank's Personal API into a local database"
license = "AGPL-3.0"
repository = "https://github.com/ryzhakar/monobank-sync"
rust-version = "1.88"

[features]
default = ["postgres"]
sqlite = ["sqlx/sqlite", "sqlx/macros"]
postgres = ["sqlx/postgres", "sqlx/macros"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["chrono", "migrate", "runtime-tokio-native-tls"], default-features = false }
dotenv = "0.15"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rand = "0.8.5"
serde_with = { version = "3.8.1", features = ["chrono"] }
tokio = { version = "1.37.0", features = ["full"] }
chrono-tz = "0.10"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
